kustomize/overlays/prod/api_rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api
spec:
  replicas: 5
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: api
  strategy:
    canary:
      canaryService: canary-api-service
      stableService: api-service  
      trafficRouting:
        istio:
          virtualService: 
            name: api-vs
            routes:             
              - primary
      analysis:
        templates:
        - templateName: success-rate
        startingStep: 2 # delay starting analysis run until setWeight: 20%
        args:
        - name: service-name
          value: canary-api-service.prod.svc.cluster.local
#        - name: handler
#          value: "/ping"    
      steps:
        - setWeight: 10
        - pause:
            duration: 10
        #- pause: {}
        - setWeight: 20
        - pause:
            duration: 30
        - setWeight: 60
        - pause:
            duration: 10
        - setWeight: 80
        - pause:
            duration: 30
